solved responsiveness issue on tablet view

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -36,6 +36,23 @@ body h1 {
 }
 
 
+body {
+  @media only screen and (max-width: 995px){
+
+    .pictures {
+      display: none;
+    }
+
+    .taggy {
+      text-align: right !important;
+    }
+
+    .empty-header {
+      display: none;
+    }
+  }
+}
+
 
 body {
   @media only screen and (max-width: 770px){
@@ -46,20 +63,12 @@ body {
       color: #a58769;
     }
 
-    .pictures {
-      display: none;
-    }
-
     .index-column.date {
       width: 10%;
     }
 
     .index-column.title-tag {
       width: 35%;
-    }
-
-    .tag {
-      text-align: right;
     }
 
     .empty-header {
